<resources>
    <string name="app_name">.eat</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_login">Login</string>
    <string name="action_search">検索</string>
    <string name="action_categories">カテゴリー</string>
    <string name="action_category_chinese">中華</string>
    <string name="action_category_japanese">和食</string>
    <string name="action_category_western">洋食</string>
    <string name="action_category_vegetarian">ベジタリアン</string>
    <string name="action_category_halal">ハラール</string>
    <string name="action_sort">並べ替え</string>
    <string name="action_sort_low2high">価格の安い順番</string>
    <string name="action_sort_high2low">価格の高い順番</string>
    <string name="action_sort_fast">料理の早い順番</string>
    <string name="action_sort_review">レビューの評価順</string>
    <string name="action_sign_up">新規登録</string>
    <string name="action_settings">個人情報確認</string>
    <string name="action_location_reset">届け先再設定</string>
    <string name="action_logout">Logout</string>
    <string name="action_recommend">友達に紹介</string>
    <string name="action_confirm_cart">カート確認</string>
    <string name="action_recent_history">注文履歴</string>
    <string name="action_find_password">パスワードをわすれたら</string>

    <string name="title_activity_login"> Login</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_family_name">姓</string>
    <string name="prompt_given_name">名</string>
    <string name="prompt_nick_name">ニックネーム</string>
    <string name="prompt_password">パスワード</string>
    <string name="prompt_telephone">携帯番号</string>
    <string name="prompt_credit_number" translatable="false">クレジットカードナンバー</string>
    <string name="prompt_expiry_month" translatable="false">有効期限(月)</string>
    <string name="prompt_expiry_year" translatable="false">有効期限(年)</string>
    <string name="prompt_cvc" translatable="false">CVC番号(3桁)</string>
    <string name="prompt_credit_name" translatable="false">カード名義</string>

    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_telephone">This telephone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid">Invalid, please confirm again!</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
